# Omni-Arb

./: .env.example  Dockerfile  Makefile  README.md  auth.py  base.py  binance.py  binance_rest.py  binance_ws.py  deployment_example.py  dvc.yaml  engine.py  funding.py  github_workflows_ai-autopilot-enhancement-suite_Version5.yaml  guards.py  hcope.py  main.py  okx.py  orchestrator.py  order.py  poll_funding.py  pyproject.toml  requirements.txt  rest.py  risk.py  risk.yml  rl_agent.py  sentiment_fingpt.py  test_binance.py  test_funding_pnl.py  test_hcope.py  test_order.py  test_smoke.py  test_validation.py  thresholds.yml  tuning.py  ws.py  ws_binance_mark.py
.github/profile/: README.md
.github/workflows/: docker-image.yml  hcope-evaluation.yml
account/: position_mode.py
accounting/: __init__.py  funding_pnl.py
conf/: exchanges.yaml  tune.yaml
conf/rl/: ppo.yaml  sac.yaml
configs/: risk.yml  thresholds.yml
core/: __init__.py  calculations.py  market_readers.py  utils.py
core/data/: __init__.py  logger.py  storage.py
deploy/: docker-compose.yml
docs/: AGENTS.md
examples/: hcope_gate_example.py
exchange/: __init__.py  binance.py
exec/: __init__.py  base.py  engine.py  guards.py  risk.py
feeds/: rest_mark_funding.py  ws_binance_mark.py
funding/: poll_funding.py
nlp/: fingpt_hooks.py  fingpt_report.py
ope/: __init__.py  hcope.py
orchestrator/: finrobot_flow.py
orders/: binance.py
policy/: __init__.py  base.py  rl_agent.py
rl/: __init__.py  env.py  train.py
signals/: __init__.py  base.py  sentiment_fingpt.py
sim/: simulator_tca.py
tests/: sample_trajectory.json  test_binance.py  test_core.py  test_engine.py  test_hcope.py  test_hcope_gate.py  test_order.py  test_order_wrapper.py  test_position_mode.py  test_rl_env.py  test_sharpe_callback.py  test_smoke.py
validation/: purged_kfold.py  wfo_runner.py
(+21 files in other folders)
