[tool.poetry]
name = "omni-arb"
version = "0.1.0"
description = "پروژه ترکیبی برای یکپارچه‌سازی FinGPT، FinRL و کانکتور MEXC فیوچرز"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
FinGPT = { path = "external/FinGPT", develop = true }
FinRL = { path = "external/FinRL", develop = true }
fastapi = "^0.95.0"
uvicorn = "^0.18.0"
pydantic = "^1.10.0"
httpx = "^0.24.0"
aiohttp = "^3.8.0"
pytest = "^7.4.0"
optuna = "^3.6.1"
"ray[tune]" = "^2.9.3"
hydra-core = "^1.3.2"
dvc = "^3.51.2"
mlflow = "^2.14.2"
wandb = "^0.16.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
